# smoflow3d

./: .project  README.md
com.sysmo.smoflow3d/: .cproject  .gitignore  .project  CMakeLists.txt
com.sysmo.smoflow3d/amesim/: AME.make  AME.make.LOCAL  AME.make.RELEASE  AMEIcons  smoflow3d.display  submodels.index
com.sysmo.smoflow3d/amesim/Icons/: SmoFlow3d.ico.bak  SmoFlow3d.xbm
com.sysmo.smoflow3d/amesim/Icons/xbm/: AdaptorFluidHeat.xbm  CFKAirHeatExchange.xbm  Compressor.xbm  Cryopump.xbm  FileReader.xbm  FileReaderDataSelector.xbm  FluidFlowGain.xbm  (+80 more)
com.sysmo.smoflow3d/amesim/submodels/: Makefile  SMO_ADAPTOR_FLUID_HEAT.c  SMO_ADAPTOR_FLUID_HEAT.spe  SMO_CRYOPUMP_HEAT_EXCHANGER.c  SMO_CRYOPUMP_HEAT_EXCHANGER.spe  SMO_DRIVECYCLEREADER.c  SMO_DRIVECYCLEREADER.spe  SMO_DRIVECYCLEREADER1.c  SMO_DRIVECYCLEREADER1.spe  SMO_FILE_READER_CSV.c  SMO_FILE_READER_CSV.spe  SMO_FILE_READER_CSV_DATA_SELECTOR.c  SMO_FILE_READER_CSV_DATA_SELECTOR.spe  SMO_FLOW_SENSOR.c  SMO_FLOW_SENSOR.spe  SMO_FLOW_SPLITTER_3PORT.c  SMO_FLOW_SPLITTER_3PORT.spe  SMO_FLUID_CHAMBER.c  SMO_FLUID_CHAMBER.spe  SMO_FLUID_CHAMBER_4PORT.c  SMO_FLUID_CHAMBER_4PORT.spe  SMO_FLUID_FLOW_ACTIVATION_SIGNAL_DEACTIVATOR_RC.c  SMO_FLUID_FLOW_ACTIVATION_SIGNAL_DEACTIVATOR_RC.spe  SMO_FLUID_FLOW_GAIN.c  SMO_FLUID_FLOW_GAIN.spe  SMO_FLUID_FLOW_SENSOR.c  SMO_FLUID_FLOW_SENSOR.spe  SMO_FLUID_FLOW_SOURCE.c  SMO_FLUID_FLOW_SOURCE.spe  SMO_FLUID_FLOW_SOURCE_MDOT_T.c  SMO_FLUID_FLOW_SOURCE_MDOT_T.spe  SMO_FLUID_FLOW_SPLITTER_3PORT.c  SMO_FLUID_FLOW_SPLITTER_3PORT.spe  SMO_FLUID_FLOW_SPLITTER_3PORT_01.c  SMO_FLUID_FLOW_SPLITTER_3PORT_01.spe  SMO_FLUID_FLOW_SWITCHER_3PORT.c  SMO_FLUID_FLOW_SWITCHER_3PORT.spe  SMO_FLUID_FLOW_ZERO.c  SMO_FLUID_FLOW_ZERO.spe  SMO_FLUID_SOURCE.c  (+166 more)
com.sysmo.smoflow3d/doc/: HydrogenSources.rst
com.sysmo.smoflow3d/python/: .gitignore  CalcCompressorEfficiency.py  ComparisonPlot.py  Media.cpp  Media.pyx  TestMediaProperties.py  setup.py  setupCompileOnly.py
com.sysmo.smoflow3d/python/R_Componets/: main.py
com.sysmo.smoflow3d/src/: CMakeLists.txt  Test.txt
com.sysmo.smoflow3d/src/file_reader/: DataTableFactory.cpp  DataTableFactory.h  FileReader.cpp  FileReader.h  FileReaderPackageWrapper.cpp  FileReaderPackageWrapper.h
com.sysmo.smoflow3d/src/flow/: Convection.cpp  Convection.h  CryopumpHeatExch.cpp  CryopumpHeatExch.h  FlowBase.cpp  FlowBase.h  FlowComponent_R_2Port.cpp  FlowComponent_R_2Port.h  FlowRComponent.cpp  FlowRComponent.h  FluidFlow.cpp  FluidFlow.h  ForcedConvection.cpp  ForcedConvection.h  FreeConvection.cpp  FreeConvection.h  FrictionFlowPipe.cpp  FrictionFlowPipe.h  FrictionFlowValve.cpp  FrictionFlowValve.h  MechanicalCompressor.cpp  MechanicalCompressor.h  Orifice.cpp  Orifice.h  PhaseSeparator.cpp  PhaseSeparator.h  PneumaticValve.cpp  PneumaticValve.h  Radiation.cpp  Radiation.h  RadiationTwoSurfaces.cpp  RadiationTwoSurfaces.h  RadiationWallFluid.cpp  RadiationWallFluid.h  ThermalConduction2Node.cpp  ThermalConduction2Node.h  ThermalConductionElement.cpp  ThermalConductionElement.h  TwoPortValve.cpp  TwoPortValve.h  (+2 more)
com.sysmo.smoflow3d/src/flow_R/: Adaptor_R.cpp  Adaptor_R.h  Component_R.cpp  Component_R.h  FlowComponent_R.cpp  FlowComponent_R.h  ManagerComponents_R.cpp  ManagerComponents_R.h  PipeHeatExchanger_R.cpp  PipeHeatExchanger_R.h  Pipe_R.cpp  Pipe_R.h  Valve_R.cpp  Valve_R.h  VirtualCapacity_R.cpp  VirtualCapacity_R.h
com.sysmo.smoflow3d/src/io_control/: CSVProcessor.cpp  CSVProcessor.h  DriveCycleReader.cpp  DriveCycleReader.h  StateMachineController.cpp  StateMachineController.h
com.sysmo.smoflow3d/src/math/: Functors.cpp  Functors.h  Interpolators.cpp  Interpolators.h  MathDefinitions.h
com.sysmo.smoflow3d/src/media/: FluidChamber.cpp  FluidChamber.h  FluidFlow.cpp  FluidFlow.h  MediaRegistry.cpp  MediaRegistry.h  MediaState.cpp  MediaState.h  Medium.cpp  Medium.h  MediumState.cpp  MediumState.h  MediumStateFluidCoolProp.cpp  MediumStateFluidCoolProp.h  MediumStateSolid.cpp  MediumStateSolid.h  SolidRegistryClass.cpp  SolidRegistryClass.h
com.sysmo.smoflow3d/src/pneumatic/: PneumaticFlapperValve.cpp  PneumaticFlapperValve.h  PneumaticPiston.cpp  PneumaticPiston.h  PneumaticValve.cpp  PneumaticValve.h
com.sysmo.smoflow3d/src/test/: CSVExample.csv  CoolProp.cpp  Functors.cpp  IOControl.cpp  MediaHydrogen.cpp  MediumSolid.cpp  RComponents.cpp
com.sysmo.smoflow3d/src/util/: CachedProperty.cpp  CachedProperty.h  CodeTiming.cpp  CodeTiming.h  CommonDefinitions.c  CommonDefinitions.h  DynamicLoader.cpp  DynamicLoader.h  Functors.cpp  Functors.h  Macros.h  MathDeclarations.h  SimulationEnvironment.cpp  SimulationEnvironment.h  SmoComponent.cpp  SmoComponent.h  String.cpp  String.h
com.sysmo.smoflow3d/src/volumes/: Component_RC.cpp  Component_RC.h  FluidChamber.cpp  FluidChamber.h  HeatExchNoPrDropNoMassAcc_CR.cpp  HeatExchNoPrDropNoMassAcc_CR.h  HeatExchNoPrDropNoMassAcc_RC.cpp  HeatExchNoPrDropNoMassAcc_RC.h  PipeHeatExchC.cpp  PipeHeatExchC.h  PipeHeatExchNoPrDrNoMassAcc.cpp  PipeHeatExchNoPrDrNoMassAcc.h  PipeHeatExchNoPrDrNoMassAccRC.cpp  PipeHeatExchNoPrDrNoMassAccRC.h  PipeHeatExchNoPrDropMassAcc_C.cpp  PipeHeatExchNoPrDropMassAcc_C.h  PipeHeatExchNoPrDropNoMassAccCR.cpp  PipeHeatExchNoPrDropNoMassAccRC.cpp  PipeHeatExchNoPrDropNoMassAccRC.h  PipeHeatExchNoPrDropNoMassAcc_CR.cpp  PipeHeatExchNoPrDropNoMassAcc_CR.h  PipeHeatExchNoPrDropNoMassAcc_RC.cpp  PipeHeatExchNoPrDropNoMassAcc_RC.h  PipeHeatExchPrDropMassAcc_RC.cpp  PipeHeatExchPrDropMassAcc_RC.h  PipeHeatExchPrDropMassAcc_RCR.cpp  PipeHeatExchPrDropMassAcc_RCR.h  PipeHeatExchPrDropRC.cpp  PipeHeatExchPrDropRC.h  PipeHeatExchPrDrop_RC.cpp  PipeHeatExchPrDrop_RC.h  PipeHeatExch_C.cpp  PipeHeatExch_C.h  TPipeJunction.cpp  TPipeJunction.h  ThermalNode.cpp  ThermalNode.h
com.sysmo.smoflow3d/src_c/: CMakeLists.txt
com.sysmo.smoflow3d/src_c/controller/: StateMachineController.h
com.sysmo.smoflow3d/src_c/util/: Arrays.h  Common.c  DynamicLoader.c  DynamicLoader.h  SmoObject.c  SmoObject.h  String.c  String.h
com.sysmo.smoflow3d/tmp/: BMW_HyAme.xbm
com.sysmo.smoflow3d/tmp/src_c/: CMakeLists.txt
(+52 files in other folders)
